src/components/Wrapper/style.scss
.wrapper {
  position: relative;
  height: 100vh;
  opacity: 0;
  transition: opacity 0.6s $easeInOut;

  &.is-loaded {
    opacity: 1;
  }

  &::before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 36px;
    pointer-events: none;
    -webkit-app-region: drag;
  }

  &__content {
    position: relative;
    width: 100%;
    height: 100%;
    overflow: hidden;
    transition:
      transform 0.6s $easeInOutQuint,
      border-radius 0.6s $easeInOutQuint,
    ;
    transform-origin: center 100%;

    &.is-hidden {
      transform: scale(0.9) translateY(-8px);
      border-radius: 12px;
      pointer-events: none;
    }
  }

  &__content-overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: $colorBlack;
    visibility: hidden;
    opacity: 0;
    transition:
      visibility 0.6s $easeInOutQuint,
      opacity 0.6s $easeInOutQuint,
    ;
  }

  &__content.is-hidden &__content-overlay {
    visibility: visible;
    opacity: 1;
  }

  &__overlay {
    position: absolute;
    top: 60px;
    left: 16px;
    right: 16px;
    bottom: 0;
    padding: 32px;
  }
}

